--- a/index.html
+++ b/index.html
@@ -333,58 +333,58 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/london.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													turkey
+													London
 												</a>
-												<p><span>14 tours</span><span>6 places</span></p>
+												<p><span>10 tours</span><span>6 places</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
                                      
                                       <div class="col-md-6">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/sweden.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													netharland
+													Scandinavia
 												</a>
-												<p><span>14 tours</span><span>12 places</span></p>
+												<p><span>18 tours</span><span>12 places</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/newyork.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													australia 
+													Newyork
 												</a>
-												<p><span>18 tours</span><span>9 places</span></p>
+												<p><span>10 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/maldives.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													australia 
+													Maldives
 												</a>
-												<p><span>18 tours</span><span>9 places</span></p>
+												<p><span>8 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/dubai.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													australia 
+													UAE
 												</a>
 												<p><span>18 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
