--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Destination<span>Travel Agency</span></a>
+	      <a class="navbar-brand" href="index.html">Destinations<span>Travel Agency</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -50,7 +50,7 @@
 	  </nav>
     <!-- END nav -->
    <!--hero-->
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/contact.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
@@ -73,7 +73,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-2">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+	            <p>Gamla Brogatan 26, 111 20, Stockholm, Sweden</p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -82,7 +82,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-2">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+	            <p><a href="tel://4670235598">+ 4670 2355 98</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -91,7 +91,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-2">Email Address</h3>
-	            <p><a href="mailto:info@destination.com">info@destination.com</a></p>
+	            <p><a href="mailto:info@destination.com">info@destinations.com</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -100,7 +100,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-2">Website</h3>
-	            <p><a href="#">destination.com</a></p>
+	            <p><a href="#">destinations.com</a></p>
 	          </div>
           </div>
         </div>
@@ -139,20 +139,17 @@
 
           <div class="col-md-6 d-flex">
           	<div id="map" class="bg-white"></div>
-            <div>
-            
-          </div>
-          </div>
       </div>
     </section>
 
+    <!--footer-->
     <footer class="ftco-footer bg-bottom" style="background-image: url(images/footer-bg.jpg);">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Destinations</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Destination is an outdoor lifestyle, creative culture and sustainable living journal that celebrates the stories of passionate people inspired by travel.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -191,8 +188,8 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+46 705 654 21</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Gamla Brogatan 26, 111 20, Stockholm, Sweden</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+ 4670 2355 98</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@destination.com</span></a></li>
 	              </ul>
 	            </div>
