added images ,changed text in footer

--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
-											<img src="images/japan.jpg" alt="portfolio image"/>
+											<img src="images/london.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													Japan
+													London
 												</a>
 												<p><span>12 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
@@ -333,10 +333,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
-											<img src="images/london.jpg" alt="portfolio image"/>
+											<img src="images/japan.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													London
+													Japan
 												</a>
 												<p><span>10 tours</span><span>6 places</span></p>
 											</div> <!-- /.item-title-->
@@ -360,7 +360,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 											<img src="images/newyork.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													Newyork
+													New York
 												</a>
 												<p><span>10 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
@@ -563,7 +563,7 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Destinations</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Destination is an outdoor lifestyle, creative culture and sustainable living journal that celebrates the stories of passionate people inspired by travel.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -602,9 +602,9 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Gamla Brogatan 26, 111 20, Stockholm, Sweden</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+ 4670 2355 98</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@destination.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
