discount offer added

--- a/index.html
+++ b/index.html
@@ -405,6 +405,45 @@ Join the millions of travelers who make the most of their vacations through Dest
 		<!--gallery end-->
     </section>
 
+    
+		<!--discount-offer start-->
+		<section class="discount-offer">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="dicount-offer-content text-center">
+							<h2>Join with us within 23 December, 2020 and get upto 40% Discount</h2>
+							<div class="campaign-timer">
+								<div id="timer">
+									<div class="time time-after" id="days">
+										<span></span>
+									</div><!--/.time-->
+									<div class="time time-after" id="hours">
+
+									</div><!--/.time-->
+									<div class="time time-after" id="minutes">
+
+									</div><!--/.time-->
+									<div class="time" id="seconds">
+
+									</div><!--/.time-->
+								</div><!--/.timer-->
+							</div><!--/.campaign-timer-->
+							<div class="about-btn">
+								<button type="button" class="btn btn-primary btn-lg">Join Now</button>
+									
+								</button>
+							</div><!--/.about-btn-->
+
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--discount-offer end-->
+
+<!--tour destination-->
     <section class="ftco-section ftco-no-pt">
     	<div class="container">
     		<div class="row justify-content-center pb-4">
