--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@ Join the millions of travelers who make the most of their vacations through Dest
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12">
-						<div class="dicount-offer-content text-center">
-							<h2>Join with us within 23 December, 2020 and get upto 40% Discount</h2>
+						<div class="discount-offer-content text-center">
+							<h2>Join with us within 23 December, 2020 and get upto 25% Discount</h2>
 							<div class="campaign-timer">
 								<div id="timer">
 									<div class="time time-after" id="days">
@@ -448,18 +448,18 @@ Join the millions of travelers who make the most of their vacations through Dest
     	<div class="container">
     		<div class="row justify-content-center pb-4">
           <div class="col-md-12 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Tour Destination</h2>
+            <h2 class="mb-4">Tour Destinations</h2>
           </div>
         </div>
         <div class="row">
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-1.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination1.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
         				<span class="days">8 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<h3><a href="#"> Switzerland</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span>  Switzerland</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
@@ -470,12 +470,12 @@ Join the millions of travelers who make the most of their vacations through Dest
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-2.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination2.jpg);"></a>
         			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">10 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<span class="price">$250/person</span>
+        				<span class="days">7 Days Tour</span>
+        				<h3><a href="#">Rio de Janeiro, Brazil</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span> Rio de Janeiro, Brazil</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
@@ -486,16 +486,15 @@ Join the millions of travelers who make the most of their vacations through Dest
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-3.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination3.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
-        				<span class="days">7 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<span class="days">10 Days Tour</span>
+        				<h3><a href="#"> India</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span> India</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
         				</ul>
         			</div>
         		</div>
@@ -503,23 +502,23 @@ Join the millions of travelers who make the most of their vacations through Dest
 
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-4.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination4.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
-        				<span class="days">8 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<span class="days">4 Days Tour</span>
+        				<h3><a href="#">Las Vegas, USA</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span>Las Vegas, USA</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
+        					<li><span class="flaticon-mountains"></span>Near Mountain</li>
         				</ul>
         			</div>
         		</div>
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-5.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination5.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
         				<span class="days">10 Days Tour</span>
@@ -535,16 +534,16 @@ Join the millions of travelers who make the most of their vacations through Dest
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-6.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination6.jpg);"></a>
         			<div class="text p-4">
-        				<span class="price">$300/person</span>
+        				<span class="price">$250/person</span>
         				<span class="days">7 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<h3><a href="#"> Japan</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span> Japan</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
+        					<li><span class="flaticon-mountains"></span>Near Mountain</li>
         				</ul>
         			</div>
         		</div>
