--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2 class="slider3d__heading" data-text="explore">EXPLORE</h2>
         </div>
         <div class="slider3d__item" style="background-image:url(images/slide1.jpg);">
-          <h2 class="slider3d__heading" data-text="the World">THE WORLD</h2>
+          <h2 class="slider3d__heading" data-text="the World"> WORLD</h2>
         </div>
         <div class="slider3d__item">
           <h2 class="slider3d__heading" data-text="without">WITHOUT</h2>
@@ -74,11 +74,11 @@
     <div class="slider3d__handle">
       <div class="slider3d__handle__inner">
         <div class="slider3d__handle__rotater">
-          <div class="slider3d__handle__item active">Page 1</div>
-          <div class="slider3d__handle__item">Page 2</div>
-          <div class="slider3d__handle__item">Page 3</div>
-          <div class="slider3d__handle__item">Page 4</div>
-          <div class="slider3d__handle__item">Page 5</div>
+          <div class="slider3d__handle__item active"> 1</div>
+          <div class="slider3d__handle__item"> 2</div>
+          <div class="slider3d__handle__item"> 3</div>
+          <div class="slider3d__handle__item"> 4</div>
+          <div class="slider3d__handle__item"> 5</div>
         </div>
       </div>
     </div>
@@ -98,7 +98,6 @@
             <p>We live in a wonderful world that is full of beauty, charm and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>We live in a world full of beauty, charm, and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>The use of traveling is to regulate imagination with reality, and instead of thinking of how things may be, see them as they are.</p>
-            <p><a href="#" class="btn btn-primary py-3 px-4">Search Destination</a></p>
           </div>
           <div class="col-md-6">
           	<div class="row">
