changed footer to all pages

--- a/Vacation.html
+++ b/Vacation.html
@@ -409,13 +409,14 @@
     	</div>
     </section>
 
+   <!--footer-->
     <footer class="ftco-footer bg-bottom" style="background-image: url(images/footer-bg.jpg);">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Destination</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2">Destinations</h2>
+              <p>Destinations is an outdoor lifestyle, creative culture and sustainable living journal that celebrates the stories of passionate people inspired by travel.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -438,14 +439,14 @@
           </div>
           <div class="col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Experience</h2>
+              <h2 class="ftco-heading-2">Popular Destinations</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Adventure</a></li>
-                <li><a href="#" class="py-2 d-block">Hotel and Restaurant</a></li>
-                <li><a href="#" class="py-2 d-block">Beach</a></li>
-                <li><a href="#" class="py-2 d-block">Nature</a></li>
-                <li><a href="#" class="py-2 d-block">Camping</a></li>
-                <li><a href="#" class="py-2 d-block">Party</a></li>
+                <li><a href="#" class="py-2 d-block">India</a></li>
+                <li><a href="#" class="py-2 d-block">Japan</a></li>
+                <li><a href="#" class="py-2 d-block">UK</a></li>
+                <li><a href="#" class="py-2 d-block">Australia</a></li>
+                <li><a href="#" class="py-2 d-block">Greece</a></li>
+                <li><a href="#" class="py-2 d-block">Sweden</a></li>
               </ul>
             </div>
           </div>
@@ -454,9 +455,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Gamla Brogatan 26, 111 20, Stockholm, Sweden</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+ 4670 2355 98</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@destination.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -466,13 +467,14 @@
           <div class="col-md-12 text-center">
 
             <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i></a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> </a>
   </p>
           </div>
         </div>
       </div>
     </footer>
-    
+    <!--end offooter-->
+  
   
 
   <!-- loader -->
