--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             <p>We live in a world full of beauty, charm, and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>The use of traveling is to regulate imagination with reality, and instead of thinking of how things may be, see them as they are.</p>
           </div>
+
+
           <div class="col-md-6">
           	<div class="row">
           		<div class="col-md-6 d-flex align-self-stretch ftco-animate">
@@ -600,7 +602,7 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Destinations</h2>
-              <p>Destination is an outdoor lifestyle, creative culture and sustainable living journal that celebrates the stories of passionate people inspired by travel.</p>
+              <p>Destinations is an outdoor lifestyle, creative culture and sustainable living journal that celebrates the stories of passionate people inspired by travel.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -623,14 +625,14 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
           </div>
           <div class="col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Experience</h2>
+              <h2 class="ftco-heading-2">Popular Destinations</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Adventure</a></li>
-                <li><a href="#" class="py-2 d-block">Hotel and Restaurant</a></li>
-                <li><a href="#" class="py-2 d-block">Beach</a></li>
-                <li><a href="#" class="py-2 d-block">Nature</a></li>
-                <li><a href="#" class="py-2 d-block">Camping</a></li>
-                <li><a href="#" class="py-2 d-block">Party</a></li>
+                <li><a href="#" class="py-2 d-block">India</a></li>
+                <li><a href="#" class="py-2 d-block">Japan</a></li>
+                <li><a href="#" class="py-2 d-block">UK</a></li>
+                <li><a href="#" class="py-2 d-block">Australia</a></li>
+                <li><a href="#" class="py-2 d-block">Greece</a></li>
+                <li><a href="#" class="py-2 d-block">Sweden</a></li>
               </ul>
             </div>
           </div>
