added top destination

--- a/Vacation.html
+++ b/Vacation.html
@@ -47,7 +47,7 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg1.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
@@ -58,59 +58,89 @@
         </div>
       </div>
     </section>
-
+<!--top destinations-->
     <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center pb-4">
           <div class="col-md-12 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Best Place Destination</h2>
+            <h2 class="mb-4">Top Destinations</h2>
           </div>
         </div>
-        <div class="row">
-        	<div class="col-md-3 ftco-animate">
-        		<div class="project-destination">
-        			<a href="#" class="img" style="background-image: url(images/place-1.jpg);">
-        				<div class="text">
-        					<h3>Singapore</h3>
-        					<span>8 Tours</span>
-        				</div>
-        			</a>
-        		</div>
-        	</div>
-        	<div class="col-md-3 ftco-animate">
-        		<div class="project-destination">
-        			<a href="#" class="img" style="background-image: url(images/place-2.jpg);">
-        				<div class="text">
-        					<h3>Canada</h3>
-        					<span>2 Tours</span>
-        				</div>
-        			</a>
-        		</div>
-        	</div>
-        	<div class="col-md-3 ftco-animate">
-        		<div class="project-destination">
-        			<a href="#" class="img" style="background-image: url(images/place-3.jpg);">
-        				<div class="text">
-        					<h3>Thailand</h3>
-        					<span>5 Tours</span>
-        				</div>
-        			</a>
-        		</div>
-        	</div>
-        	<div class="col-md-3 ftco-animate">
-        		<div class="project-destination">
-        			<a href="#" class="img" style="background-image: url(images/place-4.jpg);">
-        				<div class="text">
-        					<h3>Autralia</h3>
-        					<span>5 Tours</span>
-        				</div>
-        			</a>
-        		</div>
-        	</div>
-        </div>
-    	</div>
-    </section>
 
+        <div class="row">
+<!--first card-->
+        	<div class=" col-md-3container">
+         <div class="container-cards">
+        <div class="container-cards-surface container-cards-front">
+            <div class="container-cards-front-image">
+                <img src="https://i0.wp.com/s1.uphinh.org/2020/04/23/ankit-patel-s8YWDnE5GaY-unsplash.jpg" alt="">
+            </div>
+            <div class="container-cards-front-content">
+              <h2>INDIA</h2>
+              <p> India is the country which is surrounded by the Himalayas, Arabian Sea, Bay of Bengal and the Indian Ocean, as we all know that it is rich in its culture, heritage, unique style temples, wildlife  Sanctuaries etc. which will attract the tourists large in number.</p>
+          </div>
+            <div class="container-cards-front-label">Travel</div>
+            <div class="container-cards-front-button">
+              <button class="flip-btn">Book Now</button>
+          </div>
+        </div>
+        <div class="container-cards-surface container-cards-back">
+            <div class="container-cards-back-content">
+              <h2>TRAVEL</h2>
+            </div>
+        </div>
+    </div>
+</div>
+<!--second card-->
+<div class="col-md-3 container">
+    <div class="container-cards">
+        <div class="container-cards-surface container-cards-front">
+            <div class="container-cards-front-image">
+                <img src="https://i0.wp.com/s1.uphinh.org/2020/04/23/matthew-waring-dM_e5u-SM0U-unsplash.jpg" alt="">
+            </div>
+            <div class="container-cards-front-content">
+              <h2>Greece</h2>
+              <p>Greece is one of the most popular tourist destinations in the world. Greece is ancient sun-bleached ruins piercing blue skies, the balmy Aegean lapping an endless coastline and a culture alive with passionate music, wonderful cuisine and thrill-seeking activities.</p>
+          </div>
+            <div class="container-cards-front-label">Travel</div>
+            <div class="container-cards-front-button">
+              <button class="flip-btn">Book Now</button>
+          </div>
+        </div>
+        <div class="container-cards-surface container-cards-back">
+            <div class="container-cards-back-content">
+              <h2>WITH</h2>
+            </div>
+        </div>
+    </div>
+</div>
+        <!--third card-->	
+            <div class=" col-md-3container">
+         <div class="container-cards">
+        <div class="container-cards-surface container-cards-front">
+            <div class="container-cards-front-image">
+             <img src="https://i0.wp.com/s1.uphinh.org/2020/04/23/cosmin-georgian-gd3ysFyrsTQ-unsplash.jpg" alt="">   
+            </div>
+            <div class="container-cards-front-content">
+              <h2>Japan</h2>
+              <p>Known as the ‘Land of the Rising Sun’, Japan is an eclectic mix of past, present, and future, combining ancient samurai traditions and a new world technology.Japan has 21 World Heritage Sites,Popular foreigner attractions include Tokyo and Hiroshima, Mount Fuji.</p>
+          </div>
+            <div class="container-cards-front-label">Travel</div>
+            <div class="container-cards-front-button">
+              <button class="flip-btn">Book Now</button>
+          </div>
+        </div>
+        <div class="container-cards-surface container-cards-back">
+            <div class="container-cards-back-content">
+              <h2>US</h2>
+            </div>
+        </div>
+    </div>
+</div>       	
+    </section>
+    <!---end of top-->
+
+<!--travel form-->
     <section class="ftco-section ftco-no-pb ftco-no-pt">
     	<div class="container">
 	    	<div class="row">
@@ -186,7 +216,7 @@
 	    </div>
     </section>
 
-
+<!--end of form-->
     <section class="ftco-section ftco-no-pt">
     	<div class="container">
     		<div class="row justify-content-center pb-4">
